@@ -3,6 +3,7 @@ sunuo (0.3.2) unstable; urgency=low
   * implemented a main loop profiler
   * refuse to load objects with serial -1
   * transactional world save
+  * non-interactive world repair
   * reserve 10% space in mobile/item hash tables
   * added legacy scripts
     - blank keys should not be able to unlock doors with KeyValue 0 (patch
